@@ -1,6 +1,11 @@
 14 Feb 2010 - 2.5.13-dev1
 -------------------------
 
+ * Remove the ability to use a relative path to a piped audit logger
+   (i.e. mlogc) as Apache does not support it in their piped loggers
+   and it was breaking Windows and probably other platforms that
+   use spaces in filesystem paths.  Discovered by Tom Donovan.
+
  * Fix memory leak freeing regex.  Discovered by Tom Donovan.
 
  * Fix some portability issues on Windows.
